<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/postView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_post_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.dvpermyakov.imagepostapplication.widgets.ColoredCoverView
            android:id="@+id/coverView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.dvpermyakov.imagepostapplication.widgets.ColoredEditTextView
            android:id="@+id/editTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorTransparent"
            android:gravity="center"
            android:hint="@string/app_image_post_text_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textCapSentences|textMultiLine|textNoSuggestions"
            android:padding="@dimen/size_medium"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_xlarge" />

    </FrameLayout>

    <ImageView
        android:id="@+id/trashView"
        android:layout_width="@dimen/size_xxlarge"
        android:layout_height="@dimen/size_xxlarge"
        android:layout_margin="@dimen/size_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>