...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/fontButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/size_medium"
        android:src="@drawable/ic_toolbar_font"
...
        android:gravity="center"
        android:text="@string/app_image_post_header_title"
        android:textSize="@dimen/textsize_small"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fontButtonView"
        app:layout_constraintRight_toLeftOf="@+id/stickerButtonView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/stickerButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
